--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=server
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${DB_SAS_URL}
 spring.datasource.username=${DB_SAS_USERNAME}
-spring.datasource.password=${DB_SAS_PASSWORD
+spring.datasource.password=${DB_SAS_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.batch_size=100
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
