--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,11 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.2'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'war'
+}
+
+springBoot {
+	buildInfo()
 }
 
 group = 'su.sendandsolve'
@@ -9,7 +14,7 @@ version = '0.0.1-SNAPSHOT'
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
+		languageVersion = JavaLanguageVersion.of(19)
 	}
 }
 
@@ -36,4 +41,13 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+bootJar {
+	manifest {
+		archiveClassifier = 'boot'
+		attributes 'Main-Class': 'org.springframework.boot.loader.JarLauncher'
+		attributes 'Start-Class': 'su.sendandsolve.server.ServerApplication'
+	}
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
